--- a/res/layout/farmer.xml
+++ b/res/layout/farmer.xml
@@ -7,7 +7,8 @@
   android:orientation="vertical">
   <include layout="@layout/header"
   	android:layout_height="wrap_content"
-  	android:layout_width="fill_parent" />
+  	android:layout_width="fill_parent"
+  	android:layout_marginBottom="15dip" />
   <LinearLayout
   	android:layout_width="fill_parent"
   	android:layout_height="wrap_content"
