--- a/res/layout/farmers_list.xml
+++ b/res/layout/farmers_list.xml
@@ -6,45 +6,40 @@
     android:layout_gravity="top" 
     android:paddingTop="0dip" 
     android:orientation="vertical">
-    
+    <include layout="@layout/header"
+	  	android:layout_height="wrap_content"
+	  	android:layout_width="fill_parent"
+	  	android:layout_marginBottom="15dip" />
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		style="@style/HeaderTextViewStyle"
+		android:text="Search Farmers" />
     <LinearLayout
-	    android:orientation="vertical"
+	    android:orientation="horizontal"
 	    android:layout_width="fill_parent"
 	    android:layout_gravity="top" 
-	    android:paddingTop="0dip" 
-	    android:layout_height="wrap_content">
-    <TextView
-		android:layout_gravity="center_horizontal"
-		android:text="Find Farmer"
-		android:textColor="#fff"
-		android:layout_width="wrap_content" 
-		android:layout_height="wrap_content"
-		android:layout_marginTop="15px"
-		android:layout_marginBottom="20px"
-		android:textSize="20px" 
-		android:layout_centerHorizontal="true"
-		android:layout_weight="0"/>
-    <EditText 
-    	android:layout_height="wrap_content" 
-    	android:layout_marginRight="10px" 
-    	android:textColor="#111" 
-    	android:id="@+id/editText1" 
-    	android:layout_marginBottom="10px" 
-    	android:layout_marginLeft="10px" 
-    	android:text="EditText" 
-    	android:editable="true" 
-    	android:hint="Enter Farmer" 
-    	android:layout_width="match_parent"
-    	android:layout_weight="0">
-    </EditText>
-	<Button
-		android:id="@+id/search_farmers_button"
-		android:layout_height="wrap_content"
-		android:layout_width="wrap_content"
-		android:text="Search" 
-		android:layout_gravity="center_horizontal"
-		android:layout_centerHorizontal="true"
-		android:layout_weight="0"/>
+	    android:layout_height="wrap_content"
+	    android:weightSum="5"
+	    android:layout_marginBottom="10dip">
+	    <EditText 
+	    	android:layout_height="wrap_content" 
+	    	android:layout_marginRight="10px" 
+	    	android:textColor="#111" 
+	    	android:id="@+id/editText1"
+	    	android:layout_marginLeft="10px"
+	    	android:editable="true" 
+	    	android:hint="Enter Farmer" 
+	    	android:layout_width="wrap_content"
+	    	android:layout_weight="4">
+	    </EditText>
+		<Button
+			android:id="@+id/search_farmers_button"
+			android:layout_height="wrap_content"
+			android:layout_width="wrap_content"
+			android:layout_marginRight="10px" 
+			android:text="Search"
+			android:layout_weight="1"/>
 	</LinearLayout>
 	
 
@@ -52,11 +47,13 @@
     	android:layout_width="fill_parent"
     	android:layout_height="?android:attr/listPreferredItemHeight"
     	android:background="#22000000"
-		android:padding="6dip" 
+		android:padding="5dip" 
 		android:orientation="horizontal"
 		android:clickable="true"
 		android:id="@+id/farmer1List"
-		android:layout_marginBottom="3dip">
+		android:layout_marginLeft="5dip"
+		android:layout_marginRight="5dip"
+		android:layout_marginTop="5dip">
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
@@ -109,11 +106,14 @@
     	android:layout_width="fill_parent"
     	android:layout_height="?android:attr/listPreferredItemHeight"
     	android:background="#22000000"
-		android:padding="6dip" 
+		android:padding="5dip" 
 		android:orientation="horizontal"
 		android:clickable="true"
-		android:id="@+id/farmer2List"
-		android:layout_marginBottom="3dip">
+		android:id="@+id/farmer5List"
+		android:onClick="myClickHandler"
+		android:layout_marginLeft="5dip"
+		android:layout_marginRight="5dip"
+		android:layout_marginTop="5dip">
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
@@ -121,7 +121,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="6dip"
-        android:src="@drawable/bob_newhart" />
+        android:src="@drawable/liz_lemon" />
         <LinearLayout
     		android:layout_width="wrap_content"
     		android:layout_height="fill_parent"
@@ -130,13 +130,13 @@
             	android:layout_height="wrap_content" 
             	android:id="@+id/textView1" 
             	android:gravity="center_vertical" 
-            	android:text="Bob Newhart" 
+            	android:text="Liz Lemon" 
             	android:textColor="#000000"
             	android:layout_width="fill_parent">
             </TextView>
    			<TextView 
    				android:layout_height="26dip" 
-   				android:text="Apples, Green Beans" 
+   				android:text="Lemons, Carrots" 
    				android:textColor="#000000"
    				android:id="@+id/secondLine" 
    				android:ellipsize="marquee" 
@@ -157,7 +157,6 @@
     	android:layout_width="wrap_content" 
     	android:layout_gravity="right"
     	android:rating="4.2">
-    	
     </RatingBar>
     </LinearLayout>
 	</LinearLayout>
@@ -166,11 +165,13 @@
     	android:layout_width="fill_parent"
     	android:layout_height="?android:attr/listPreferredItemHeight"
     	android:background="#22000000"
-		android:padding="6dip" 
+		android:padding="5dip" 
 		android:orientation="horizontal"
 		android:clickable="true"
 		android:id="@+id/farmer3List"
-		android:layout_marginBottom="3dip">
+		android:layout_marginLeft="5dip"
+		android:layout_marginRight="5dip"
+		android:layout_marginTop="5dip">
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
@@ -222,11 +223,13 @@
     	android:layout_width="fill_parent"
     	android:layout_height="?android:attr/listPreferredItemHeight"
     	android:background="#22000000"
-		android:padding="6dip" 
+		android:padding="5dip" 
+		android:layout_marginLeft="5dip"
+		android:layout_marginRight="5dip"
+		android:layout_marginTop="5dip"
 		android:orientation="horizontal"
 		android:clickable="true"
-		android:id="@+id/farmer4List"
-		android:layout_marginBottom="3dip">
+		android:id="@+id/farmer4List">
     <ImageView
         android:id="@+id/icon"
         android:layout_width="wrap_content"
@@ -270,63 +273,6 @@
     	android:layout_width="wrap_content" 
     	android:layout_gravity="right"
     	android:rating="2.3">
-    </RatingBar>
-    </LinearLayout>
-	</LinearLayout>
-	
-	<LinearLayout
-    	android:layout_width="fill_parent"
-    	android:layout_height="?android:attr/listPreferredItemHeight"
-    	android:background="#22000000"
-		android:padding="6dip" 
-		android:orientation="horizontal"
-		android:clickable="true"
-		android:id="@+id/farmer5List"
-		android:layout_marginBottom="3dip"
-		android:onClick="myClickHandler">
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="6dip"
-        android:src="@drawable/liz_lemon" />
-        <LinearLayout
-    		android:layout_width="wrap_content"
-    		android:layout_height="fill_parent"
-    		android:orientation="vertical">
-            <TextView 
-            	android:layout_height="wrap_content" 
-            	android:id="@+id/textView1" 
-            	android:gravity="center_vertical" 
-            	android:text="Liz Lemon" 
-            	android:textColor="#000000"
-            	android:layout_width="fill_parent">
-            </TextView>
-   			<TextView 
-   				android:layout_height="26dip" 
-   				android:text="Lemons, Carrots" 
-   				android:textColor="#000000"
-   				android:id="@+id/secondLine" 
-   				android:ellipsize="marquee" 
-   				android:layout_width="fill_parent" 
-   				android:singleLine="true">
-   			</TextView>
-        </LinearLayout>
-        <LinearLayout
-    		android:layout_width="fill_parent"
-    		android:layout_height="fill_parent"
-    		android:orientation="vertical">
-    <RatingBar 
-    	android:id="@+id/avg_farmer_rating" 
-    	android:layout_height="wrap_content" 
-    	android:stepSize="0.1" 
-    	android:numStars="5" 
-    	style="?android:attr/ratingBarStyleSmall" 
-    	android:layout_width="wrap_content" 
-    	android:layout_gravity="right"
-    	android:rating="4.2">
     </RatingBar>
     </LinearLayout>
 	</LinearLayout>
