--- a/res/layout/find_products.xml
+++ b/res/layout/find_products.xml
@@ -4,17 +4,15 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/background">
-	
+    <include layout="@layout/header"
+	  	android:layout_height="wrap_content"
+	  	android:layout_width="fill_parent"
+	  	android:layout_marginBottom="15dip" />
 	<TextView
-		android:layout_gravity="center_horizontal"
-		android:text="Find Products"
-		android:textColor="#fff"
-		android:layout_width="wrap_content" 
+		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="15px"
-		android:layout_marginBottom="20px"
-		android:textSize="20px"/>
-	
+		style="@style/HeaderTextViewStyle"
+		android:text="Search Products" />
 	<EditText
 		android:layout_gravity="center_horizontal"
 		android:hint="Enter product"
