--- a/res/layout/popup_login.xml
+++ b/res/layout/popup_login.xml
@@ -20,6 +20,7 @@
 			android:layout_marginBottom="3px" />
 		
 		<EditText
+			android:id="@+id/popup_login_username"
 			android:layout_gravity="center_horizontal"
 			android:hint="Username"
 			android:textColor="#111"
@@ -31,6 +32,7 @@
 			android:layout_marginRight="10px"
 			/>	
 		<EditText
+			android:id="@+id/popup_login_password"
 			android:layout_gravity="center_horizontal"
 			android:hint="Password"
 			android:textColor="#111"
@@ -96,8 +98,9 @@
 			android:textSize="20px"/>
 		
 		<EditText
+			android:id="@+id/popup_register_username"
 			android:layout_gravity="center_horizontal"
-			android:hint="Name"
+			android:hint="Username"
 			android:textColor="#111"
 			android:editable="true"
 			android:layout_width="match_parent" 
@@ -107,8 +110,9 @@
 			android:layout_marginRight="10px"
 			/>	
 		<EditText
+			android:id="@+id/popup_register_email"
 			android:layout_gravity="center_horizontal"
-			android:hint="Username/Email"
+			android:hint="E-mail"
 			android:textColor="#111"
 			android:editable="true"
 			android:layout_width="match_parent" 
@@ -118,6 +122,7 @@
 			android:layout_marginRight="10px"
 			/>	
 		<EditText
+			android:id="@+id/popup_register_password"
 			android:layout_gravity="center_horizontal"
 			android:hint="Password"
 			android:textColor="#111"
