--- a/res/layout/farmer.xml
+++ b/res/layout/farmer.xml
@@ -36,13 +36,37 @@
 					android:shadowDy="1"
 					android:shadowRadius="1"
 					android:text="Liz Lemon" />
-				<TextView
-					android:id="@+id/farmer_avg_rating_text"
-					android:layout_width="wrap_content"
+				<LinearLayout
+					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
-					android:textColor="#FF405270"
-					android:textSize="18px"
-					android:text="4.2 Avg. Rating (37 users)" />
+					android:orientation="horizontal">
+					<TextView
+						android:id="@+id/farmer_avg_rating_number"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:textColor="#FF405270"
+						android:textSize="18px"
+						android:text="0.0" />
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:textColor="#FF405270"
+						android:textSize="18px"
+						android:text=" Avg. Rating (" />
+					<TextView
+						android:id="@+id/farmer_avg_rating_num_users"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:textColor="#FF405270"
+						android:textSize="18px"
+						android:text="0" />
+					<TextView
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:textColor="#FF405270"
+						android:textSize="18px"
+						android:text=" users)" />
+				</LinearLayout>
 				<RatingBar
 					android:id="@+id/farmer_avg_rating"
 					android:layout_width="wrap_content"
