--- a/res/layout/farmer.xml
+++ b/res/layout/farmer.xml
@@ -19,7 +19,7 @@
 			android:id="@+id/farmer_image"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:src="@drawable/john_johnston" />
+			android:src="@drawable/ic_contact_picture" />
 		<LinearLayout
 			android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
@@ -39,7 +39,8 @@
 				<LinearLayout
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
-					android:orientation="horizontal">
+					android:orientation="horizontal"
+					android:layout_margin="0dip">
 					<TextView
 						android:id="@+id/farmer_avg_rating_number"
 						android:layout_width="wrap_content"
