--- a/res/layout/farmer_list_item.xml
+++ b/res/layout/farmer_list_item.xml
@@ -16,19 +16,36 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_marginRight="6dip"
-        android:src="@drawable/john_johnston" />
+        android:src="@drawable/ic_contact_picture" />
     <LinearLayout
-		android:layout_width="wrap_content"
+		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:orientation="vertical">
-        <TextView 
-        	android:layout_height="wrap_content" 
-        	android:id="@+id/farmer_list_item_name" 
-        	android:gravity="center_vertical" 
-        	android:text="John Johnston" 
-        	android:textColor="#FFF"
-        	android:layout_width="fill_parent">
-        </TextView>
+		<LinearLayout
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal">
+			 <TextView 
+	        	android:layout_height="wrap_content" 
+	        	android:id="@+id/farmer_list_item_name" 
+	        	android:gravity="center_vertical" 
+	        	android:text="Farmer Joe" 
+	        	android:textColor="#FFF"
+	        	android:layout_weight="1"
+	        	android:layout_width="fill_parent">
+	        </TextView>
+		    <RatingBar 
+		    	android:id="@+id/farmer_list_item_ratingbar" 
+		    	android:layout_height="wrap_content" 
+		    	android:stepSize="0.1" 
+		    	android:numStars="5" 
+		    	style="?android:attr/ratingBarStyleSmall" 
+		    	android:layout_width="wrap_content" 
+		    	android:gravity="right"
+		    	android:layout_weight="0"
+		    	android:rating="3">
+		    </RatingBar>
+	    </LinearLayout>
 		<TextView 
 			android:layout_height="26dip" 
 			android:text="Corn, Wheat" 
@@ -38,20 +55,5 @@
 			android:layout_width="fill_parent" 
 			android:singleLine="true">
 		</TextView>
-    </LinearLayout>
-    <LinearLayout
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:orientation="vertical">
-	    <RatingBar 
-	    	android:id="@+id/farmer_list_item_ratingbar" 
-	    	android:layout_height="wrap_content" 
-	    	android:stepSize="0.1" 
-	    	android:numStars="5" 
-	    	style="?android:attr/ratingBarStyleSmall" 
-	    	android:layout_width="wrap_content" 
-	    	android:layout_gravity="right"
-	    	android:rating="3">
-	    </RatingBar>
     </LinearLayout>
 </LinearLayout>
