--- a/res/layout/manage_markets.xml
+++ b/res/layout/manage_markets.xml
@@ -14,27 +14,17 @@
 		android:layout_height="wrap_content"
 		style="@style/HeaderTextViewStyle"
 		android:text="Your Markets" />
-	<LinearLayout
-	  	android:orientation="vertical"
+	<ListView android:id="@+id/manage_markets_listview"
 		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:layout_weight="1">
-		<com.communitymarket.MenuButtonItem
-		  	android:id="@+id/haymarket_button"
-		  	android:text="Lincoln Haymarket"
-		  	style="@style/MenuButtonItem" 
-		  	android:layout_marginTop="10dip"/>
-		<com.communitymarket.MenuButtonItem
-		  	android:id="@+id/omaha_button"
-		  	android:text="Omaha Market"
-		  	style="@style/MenuButtonItem" 
-		  	android:layout_marginTop="10dip"/>
-		<com.communitymarket.MenuButtonItem
-		  	android:id="@+id/recently_added_button"
-		  	style="@style/MenuButtonItem" 
-		  	android:layout_marginTop="10dip"
-		  	android:visibility="gone"/>
-	</LinearLayout>
+		android:layout_height="fill_parent"
+		android:layout_marginTop="2dip"
+		android:dividerHeight="5dip"
+		android:divider="@android:color/transparent"
+		android:listSelector="#000"
+		android:cacheColorHint="@android:color/transparent"
+		android:layout_weight="1"
+		android:scrollbarAlwaysDrawVerticalTrack="false"
+		android:scrollbarFadeDuration="2000" /> 
 	<Button
 		android:id="@+id/manage_add_new_button"
 		android:text="Add New Market"
